SERVER-31808 Query vector<SockAddr> from TransportLayer