src/mongo/transport/transport_layer_mock.h
@@ -71,6 +71,8 @@ public:
     void shutdown() override;
     bool inShutdown() const;
 
+    std::vector<HostAndPort> getListeningPorts() const override { return {}; }
+
 private:
     struct Connection {
         bool ended;
